--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,3 +2,103 @@
 body {
     background-color: cornsilk; /* Bara för att testa, ÄNDRA eller ta bort! */
 }
+
+h1 {
+    font-size: 50px;
+}
+
+
+.knappen {
+    background-color: burlywood;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    cursor: pointer;
+    position: relative;
+}
+.knappen:hover {
+    background-color: blanchedalmond;
+}
+
+.dropdown-menu {
+    position:absolute;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    flex-direction: column;
+    background-color:lightslategray;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.visa-menun {
+    
+    visibility: visible;
+    opacity: 1;
+}
+
+.göm-menun {
+    visibility: hidden;
+}
+
+#slider-r {
+    cursor: pointer;
+    margin: 2px;
+}
+
+#slider-g {
+    cursor: pointer;
+    margin: 2px;
+}
+
+#slider-b {
+    cursor: pointer;
+    margin: 2px;
+}
+
+#button-color {
+    cursor: pointer;
+    margin: 0px;
+    padding-bottom: 3px;
+}
+
+
+
+
+
+#thumbnails img {
+    max-height: 100px;
+    cursor: pointer;
+}
+
+#lightbox img {
+    max-height: 700px;
+    max-height: 90%;
+    max-width: 80%;
+}
+
+#lightbox {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 100%;
+    height: 100%;
+}
+
+#closeLightbox {
+    display: flex;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+}
+
+#closeLightbox :hover, :focus {
+    cursor: pointer;
+    opacity: 0.5;
+}
