--- a/assets/css/ssp.css
+++ b/assets/css/ssp.css
@@ -2,16 +2,19 @@
 body {
     background-color: teal; /* Bara för att testa, ÄNDRA eller ta bort! */
 }
-
+#spela{
+    margin-left: 3.5vw;
+    margin-top: -1.5vw;
+}
 #vale{
-    height: fit-content;
+    
     font-size:large;
     margin-left: 2vw ;
 }
 
 #game{
     display:flex;
-    height: 4vw;
+    height: 3vw;
     
 }
 #börjar{
