--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,18 @@
 /* Site-wide styling here */
 body {
-    background-color: cornsilk; /* Bara för att testa, ÄNDRA eller ta bort! */
+    background-color: cornsilk;
+    /* Bara för att testa, ÄNDRA eller ta bort! */
     margin: 0px;
+}
+
+#site {
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
     font-size: 50px;
+    width: 500px;
 }
 
 #navBar {
@@ -27,23 +34,24 @@ h1 {
     cursor: pointer;
     position: relative;
 }
+
 .knappen:hover {
     background-color: rgb(204, 204, 204);
 }
 
 .dropdown-menu {
-    position:absolute;
+    position: absolute;
     display: flex;
     align-items: center;
     width: fit-content;
     flex-direction: column;
-    background-color:rgb(88, 88, 88);
+    background-color: rgb(88, 88, 88);
     visibility: hidden;
     opacity: 0;
 }
 
 .visa-menun {
-    
+
     visibility: visible;
     opacity: 1;
 }
@@ -109,7 +117,8 @@ h1 {
     height: 50px;
 }
 
-#closeLightbox :hover, :focus {
+#closeLightbox :hover,
+:focus {
     cursor: pointer;
     opacity: 0.5;
 }
@@ -120,16 +129,12 @@ h1 {
     display: inline-block;
 }
 
-/* #navigationMenu:hover #navigationContent {
-    display: block;
-} */
-
-
 #navigationButton {
     font-size: large;
     cursor: pointer;
-    background-color:rgb(155, 155, 155);
+    background-color: rgb(155, 155, 155);
 }
+
 #navigationMenu {
     width: 90%;
 }
@@ -146,10 +151,10 @@ h1 {
     padding-top: 3px;
     margin-bottom: 0px;
     list-style-type: none;
-    color:lightgray;
-    font-family:'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: lightgray;
+    font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: larger;
-    
+
 }
 
 #navigationContent ul li:hover {
@@ -164,10 +169,32 @@ h1 {
 }
 
 
-#lightbox {
-    display: none;
+#articleContent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-#lightbox.show {
+#footer {
     display: flex;
+    position: fixed;
+    justify-content: center;
+    bottom: 0;
+    background-color: black;
+    color: white;
+    width: 100%;
+    font-size: medium;
 }
+
+
+#theBox {
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+    height: 100px;
+    border: 2px solid gray;
+    font-size: medium;
+}
+
+
