--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -202,8 +202,8 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 100px;
-    height: 100px;
-    border: 2px solid gray;
+    height: 80px;
+    border: 3px solid black;
     font-size: medium;
 }
 
