--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -202,9 +202,33 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 100px;
-    height: 80px;
+    height: fit-content;
     border: 3px solid black;
     font-size: medium;
 }
 
 
+
+
+
+#homeText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    text-align: center;
+
+}
+
+#hometext h3, p {
+    position: relative;
+    z-index: 2; 
+}
+
+#moneyFall {
+    left: -244px;
+    width: 195%;
+    height: auto;
+    position: absolute; 
+    z-index: 1; 
+}
